mountall (2.32) UNRELEASED; urgency=low

  [ Steve Langasek ]
  * Drop /lib/init/rw from /lib/init/fstab, since this is now always a symlink
    to /run.

  [ James Hunt ]
  * src/mountall.c: mounted(): Add cast to appease gcc 4.6.2.

 -- James Hunt <james.hunt@ubuntu.com>  Thu, 05 Jan 2012 16:03:20 +0000

mountall (2.31) oneiric; urgency=low

  * Added com.ubuntu.Mountall.server interface. Implemented the mntctl command
    with 4 commands: 1. StopTimer 2. RestartTimer 3. ChangeMountDevice 4.
    Version.
  * Fixed the coding style bugs in the "timeout" option related code. Also
    removed a break from the is_device_ready () to get the "device-not-ready"
    event for all the devices which are marked with the timeout option and
    which are not ready by the time the timer expires.
  * Added debian/initramfs/Makefile.am to install mountall.initramfs-hook as
    an initramfs hook that installs mntctl, mountall and other files needed by
    an event driven initramfs. Also added
    debian/initramfs/upstart-jobs/Makefile.am to install the upstart-jobs
    related to mountall in the event driven initramfs. The current
    mountall.conf execute as an upstart job in place of the "local" script in
    the non-event driven initramfs
    
 -- Surbhi Palande <surbhi.palande@canonical.com>  Fri, 15 Jul 2011 13:32:33 +0100

mountall (2.30) oneiric; urgency=low

  * conf/mounted-dev.conf: Stop copying /lib/udev/devices/. udevd already does
    that, and with devtmpfs it's obsolete now anyway.
  * conf/mounted-dev.conf: Create a /dev/shm → /run/shm symlink, while our
    eglibc is still looking for it in /dev/.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 14 Jul 2011 09:14:15 +0200

mountall (2.29) oneiric; urgency=low

  * Don't actually try to migrate /var/run in /etc/init/mounted-run.conf,
    since / isn't guaranteed to be mounted read-write at the time /run is
    mounted.  Handle this in the initscripts shutdown scripts instead.